fixed mobile nav spacing

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -164,7 +164,7 @@ p {
             #nav-links {
                 @include os-font(14px);
                 justify-content: left;
-                gap: 30px;
+                gap: 25px;
             }
         }
     }
